# ChangeLog for net-im/gajim
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.187 2013/07/28 12:03:35 jlec Exp $

*gajim-0.16_alpha2 (28 Jul 2013)

  28 Jul 2013; Justin Lecher <jlec@gentoo.org> +gajim-0.16_alpha2.ebuild:
  Bump to second alpha

*gajim-0.16_alpha1 (28 Jul 2013)

  28 Jul 2013; Justin Lecher <jlec@gentoo.org> +gajim-0.16_alpha1.ebuild:
  Add alpha version

  13 Jun 2013; Justin Lecher <jlec@gentoo.org> gajim-0.15.4.ebuild:
  Make gnome-keyring support accessible with complete gnome desktop, #472930;
  thanks Aline Freitas for patch

  29 May 2013; Justin Lecher <jlec@gentoo.org> gajim-0.15.3-r1.ebuild,
  gajim-0.15.4.ebuild:
  Add missing python to DEPs and REQUIERED_USE

*gajim-0.15.4 (26 May 2013)

  26 May 2013; Justin Lecher <jlec@gentoo.org> +gajim-0.15.4.ebuild:
  Version BUmp

  23 Apr 2013; Justin Lecher <jlec@gentoo.org> -gajim-0.15.2-r3.ebuild,
  -gajim-0.15.2-r4.ebuild, -gajim-0.15.3.ebuild:
  Drop old

  22 Apr 2013; Agostino Sarubbo <ago@gentoo.org> gajim-0.15.3-r1.ebuild:
  Stable for sparc, wrt bug #465198

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> gajim-0.15.3-r1.ebuild:
  Stable for ia64, wrt bug #465198

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> gajim-0.15.3-r1.ebuild:
  Stable for alpha, wrt bug #465198

  16 Apr 2013; Agostino Sarubbo <ago@gentoo.org> gajim-0.15.3-r1.ebuild:
  Stable for ppc64, wrt bug #465198

  15 Apr 2013; Agostino Sarubbo <ago@gentoo.org> gajim-0.15.3-r1.ebuild:
  Stable for ppc, wrt bug #465198

  15 Apr 2013; Agostino Sarubbo <ago@gentoo.org> gajim-0.15.3-r1.ebuild:
  Stable for x86, wrt bug #465198

  15 Apr 2013; Agostino Sarubbo <ago@gentoo.org> gajim-0.15.3-r1.ebuild:
  Stable for amd64, wrt bug #465198

*gajim-0.15.3-r1 (21 Mar 2013)

  21 Mar 2013; Justin Lecher <jlec@gentoo.org> +gajim-0.15.3-r1.ebuild,
  +files/gajim-0.15.3-starttls.patch: