@@ -15,26 +15,28 @@ DIST gajim-0.15.3.tar.bz2 4473787 SHA256 4848e98b25b523e28014528a8b89289bf987d5c
 DIST gajim-0.15.4.tar.bz2 4473874 SHA256 27acfecf40e2da55e8f7ec5d653acaf0914376f2d42766af27963c008bee4dc0 SHA512 f1f316aa11531dc37f97b2d06fd3e3e4a4d9187de0e0b3fa468283e88e16ee6372d6c49c57dd7bd8b51809e7d3130aee88a178bb64bf29349b27450224c0840e WHIRLPOOL a12c467f7a62f097c2ec64c31f8d336f5d7c7851d36716dffcb1998d1895de385a6b567931abe94eef2e53418122e3a482e3200650893cc1cbd4b0f1fc9db238
 DIST gajim-0.16-alpha1.tar.bz2 4555604 SHA256 212658b5aa448fb2c54b323c83ce9ad8e02dafde5d8069de29c5abaca08d6df0 SHA512 8bf1b36084e72d123e086446f3b84b16a7b00601910720cfe0d7efe69db03c35a192b9c5b73d45dde33eb80c0b95ae2890ce4a2d6d83494b2ff2bb6f4f8161ef WHIRLPOOL fdf337523c6c5d2e23b012318f4fae9ad722896b037670f5a690dfbcdea004092b98350cb422743ce9865d165ea4411b30d128d5ce18b4c1362d01e7afb36de6
 DIST gajim-0.16-alpha2.tar.bz2 4556553 SHA256 614b7313fc0355c571df63d0f786a3943281ac1b1ce2f04a5301b6a818fac7a2 SHA512 b0a2cdfdca8c13cc299f205e9f3f385a740fadefeb41a4d5e5982417adbc05efe32b5f48a769b442bdaaed7781a31853e7d147ecc133ee54159e82d3890d2335 WHIRLPOOL a405495930123acd78465f5198c10deb4a7265f678b4207ed4d7298910e210894839fe1ac53bd0014d4cd39572bba53d973dac847243547b63b36050ef607a1d
+DIST gajim-0.16-beta1.tar.bz2 4617116 SHA256 c51746c5456b03b95dbea9a56d961b447b1c75d603979314355df360265b6cb2 SHA512 ce2317f460b3bf1bef91f0c29bc4da715c0c59680f59a2367f0ee6b93d160e47917bb28beaac0f7c02d51868d2040e8c7ed2447b509ca05eb4429d3eaf4b857a WHIRLPOOL f70c26a1337a306ffdf616edf06cc10e94a8442df14b2cf1b65827182960937dfe37a510a702cb1942298818e82cbd1abd79ac7c180826eca82e132abcb4229d
 EBUILD gajim-0.15.3-r1.ebuild 2903 SHA256 405a7be1fd605d3c798dc8dadced94479190475c1f0d88b996b2a9935d3db6f6 SHA512 dcdd859fd65f984b54d5e065cd2c2f7f2b4c4add5f10cc2b520d469979aceda254ac8597deed3e74a334a832a72d452bdc0497e8a2ca876159b522ef7a3ac507 WHIRLPOOL c41244eaebfb2a32a31a0c582796fa3e9b6f2c3d0c9f7e33b6b9fa492c61d40f29c6680b4e166d960fcf2acd67627aa2abb8a5d266e60e014acf89fd0527dc2a
 EBUILD gajim-0.15.4.ebuild 2942 SHA256 307a3fe30cfd8c8305d6bc6d44074d963a086d34fa59a89f82a8434aa63a1487 SHA512 ba062afb4839df7cd5ce73ef28b9e56ffcdbbd720c8b1834726fc3b731e25454e92cf34c362628ee16c980fac855147f29656db48fa718acc60efef84fb38893 WHIRLPOOL 562baa06bf798e498c48d571144c567963f823cb45dd55ea1cf5e325614bf4d12b8ab9915f684b9d4f6fbe36b6a12b240dadf4a2b629ab361ed47bb5af1d7c8f
 EBUILD gajim-0.16_alpha1.ebuild 2939 SHA256 0c92270e731462a76424730f362a2bc8cc374a050191b1824bc5480baef28c59 SHA512 0ed841774925e32ef097903217286155a6d0689c1c7c12b94a06973e66ac238c03caa9c2a062fce33927933ef58a9c8efbc4edb36ef69827ff60cad3152b5a3b WHIRLPOOL d2f2514962b5ec718fd5b7d9caa21e11d6accfacd9eb31b387539d671bea032da9ffa51cf64d7d197e04e4de501a71c6204da8b55cfeb4455e956266e57dedd5
 EBUILD gajim-0.16_alpha2.ebuild 2939 SHA256 b98cae7136b0d0c2a9f42254be8011380e1353d61024358e6f9d55a8cd87d339 SHA512 02a357a4af3add729ba4608a7737a8ca0278ad90b7e52e377461d7bd3a241f506837f4deb3ac198ab8bde9e4946adf27488b6843674a643c466db7a43aa444a8 WHIRLPOOL c3d11bf1b6fbdd08e6cc8077b2c047e5149035a577a53eabc635d0a03fa5fb7a333b7326a7c126b1e6ef56deb9313c9b97c07606d67e2da417810acc7b2d706d
-MISC ChangeLog 26937 SHA256 251ab2d3b17fe1e500e645d93717fc4c833c39200d5658d0a45b09b6ac0d81e5 SHA512 b09f5e1f2ba3ebd338d7a7cc628b1f590cbf4c8ff40d99e8f9734df59d6fab88df46228a0b9b00a17cc9846e24c546b70ae5d49f04cf2fbc9d18a8b807669502 WHIRLPOOL c1f6706a124667b59fc398381d400550bc7aec0e6f8ad7ec118590015619acd563938ca86394700df792c407635ec644fdb4c25ccf4868f6040cab50d6672c26
+EBUILD gajim-0.16_beta1.ebuild 2938 SHA256 00607ea8b099fb21b4585e88c0b9401f9d662c18d685b7aab04a6776e854274e SHA512 4a36b9847ee8dd8ce8701bb0918ca9848b322729fc548c228836f10b65454864eac0c7cd1834d7d244800408672c09ae2dcdc590757d6da8e0d2f25b634f7fe4 WHIRLPOOL 58f13be5db332fe3e397d362403fcd90ceae87a6bf04064ada95e3ce9b965d0539b888418da3453f3f8396d926ec29ede21271cf481dcc111a5b88a7914408bb
+MISC ChangeLog 27059 SHA256 94c0cbdcd67f10bdacd3a2a8f98e9fde4f189f8be1029e41611785ee8172c7c3 SHA512 8157ad7d692f70b6352689ab5317d33804aae1152370676be3962ebe9a0c847305b4338bd05989f75410a08a25d5cc15b9df04621946bb68caf7e70796f00e98 WHIRLPOOL 679fcf26bb7a4983126fa948179d045d9ffffdcdd091c947b6cf0f5dd56a149e11f18ed608763bc2a9a32765d71d2b20003433ff14df8ecf6c86858331c63fa5
 MISC metadata.xml 503 SHA256 781012e83e7e3d1480ed6413a58f8a294e3a1b4c4968b1217c9bf7b41cca3ae5 SHA512 cfc7f159daf5007962ea035289002df56575042d567aa36c495b95dcf7ca7bb931be622599537e9ea67c25b7cb75014acf38a13bda349218af7a5eb576ebb0a4 WHIRLPOOL 3ff97b378ffe5c79d63ba206dec6c346480c42aa4988bed662066efbf5599e0986c83cd1ade54bded8bb2e2ad0ab6ad6f18c791b59f11215c2a52c4503721cbb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQIcBAEBCgAGBQJR9QiYAAoJELnU8jG9FVirtl4P/2faXvDSjYmbFduCH87k3LNX
-N4A59FcZf441o9E7gDdAphdgS0gdlgLEPFSYtQpy2lZddBBsTUJmb3JEnnBrnJ4q
-GlW9ZZsYDdwLhiS39TmMc9HohpqZujZXDLaezjAFt4+du7N7qf80uuSAFhRccNuJ
-tVLKxLUgpIu1OhOiipGztp0T4vLbx0gKs1fOxyVjfAHmWg3yGlgrrsPN9Y3wuSC/
-vsIwembtMI1KSTotwfrGZkaFKM0QCHZicryHJodrnYrN16VSYnLQCyEl7YYVsjQx
-OXpbMBcFPa4TbJMgcwjy2v/8EPrQyocfKjOGaekBe5y1POGYwqoc4PAUDtxY9/mG
-N+Cjow4An7HDQnbeNt9GGnfcOV8r6ZW3h+CFjrZNkACphAVw1YZwHLZIqhJWFfXb
-jY4cm9bzPiqkM6dptEJcCRPad40IZsI4Hb7i17jBviy65l0+uYX0RIM2JV7sgAbA
-G6W7mKwqiyMJYLXxMRrserllF0tzGsQTiyHGztP9NrBKJa/oGmoSy5CJK/jnthNK
-vU+djNDopOUDzxAzrOvZ67HR6DPeJd8LnZTXXbUahC8KYG50YTuJsGPMf51wVz6O
-rbKqFEUoscROU9Lp2GBEPwxXCurTZJH0vxC04U5jXS/7kxAVpHUrswe4JKonkHLa
-aYKBxI0WvRaxeDzRSMqA
-=6/1c
+iQIcBAEBCgAGBQJSN/hBAAoJELnU8jG9FVirFxcP+QGdCLPLeA7BAeZS5UnQ/8fd
+gmPoQMM3alaBtvZTzc6SZXZH3jmcW5+f5FsR2PzDHvEZgRCpniZX1cIqOZEngznE
+/A3qla07byFXqjSl7Vm5Cer9NfsDM+ygggLvXEcZxMmOdrmcubIuw6457o5RykXy
+E45UQsd5zPv/Y5KhVRjZOoQltt0TOUao2Y4aJdj82SSgwHB/IUsCjvRzKAGSBkDT
+n3Oi6xSkKdX59eG61Oaj1NGefjzsv58gSMXd6tuN1VxIPJDODdzzEngVuMS65P2E
+7WacuLFKsYTG8iR2z1fvQ4c4yWP7YLqkUyiU0ZUijl+BPq0YIZ7vxFuiiCdHiEN9
+WaiIkQO+qnx9hzr7JR8CMaRAVCwPyQ5FkCSl2OVHW2OBqrMERjOcIek+10bC5lMx
+Ax1wfsvGjDtkYbcommTsYhaE6YnLp/bFs8RPe2UDaBkt2i/8jWqq/IjPUfuPurOr
+TZEKfUDzwSUXvGRNWhkU8OEe8j78WViOW4Ov+Lrkrd6VhDXAAL93b7jdr3bdljhk
+nKwmdSey5YBVIPbSZ/q6mIP15ucc0zscnGCno+7hUwEWJHPBqYpsy0xY1fmUxxbL
+/ga6gzw0ztTZMTMoJNZjz5Ukf22iSa4M6cvDzFLkjqSjPf7AA0YWQZx6sYwymUD3
+nJmJZC5hxISj7/fTDJbu
+=cQvF
 -----END PGP SIGNATURE-----
