@@ -1,6 +1,11 @@
 # ChangeLog for net-im/gajim
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.187 2013/07/28 12:03:35 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.188 2013/09/17 06:36:09 jlec Exp $
+
+*gajim-0.16_beta1 (17 Sep 2013)
+
+  17 Sep 2013; Justin Lecher <jlec@gentoo.org> +gajim-0.16_beta1.ebuild:
+  Version BUmp
 
 *gajim-0.16_alpha2 (28 Jul 2013)
 
